--- a/index.html
+++ b/index.html
@@ -5,8 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIVINE SPICE</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
-    
+    <!--Navigation-->
+    <div class="wrapper">
+        <nav>
+          <input type="checkbox" id="show-search">
+          <input type="checkbox" id="show-menu">
+          <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+          <div class="content">
+          <div class="logo"><a href="#">DIVINE SPICE</a></div>
+            <ul class="links">
+              <li><a href="#">Home</a></li>
+              <li>
+                <a href="#" class="desktop-link">Products</a>
+                <input type="checkbox" id="show-products">
+                <label for="show-products">Products</label>
+                <ul class="roll-out-nav">
+                  <li><a href="#">Hair</a></li>
+                  <li><a href="#">Body</a></li>
+                  <li><a href="#">Deodorant</a></li>
+                  <li><a href="#">Bestsellers</a></li>
+                  <li><a href="#">Sales</a></li>
+                  <li><a href="#">Editions</a></li>
+                  <li><a href="#">Gift ideas</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Men</a></li>
+              <li>
+                <a href="#" class="desktop-link">Campaigns</a>
+                <input type="checkbox" id="show-campaigns">
+                <label for="show-campaigns">Campaigns</label>
+                <ul class="roll-out-nav">
+                  <li><a href="#">Female body hair</a></li>                                                                      
+                  <li><a href="#">Female self-esteem</a></li>
+                </ul>
+              </li>
+              <li><a href="#">MyDivineSpice</a></li>
+              <li>
+                <a href="#" class="desktop-link">About us</a>
+                <input type="checkbox" id="show-about-us">
+                <label for="show-about-us">About us</label>
+                <ul class="roll-out-nav">
+                    <li>
+                        <a href="#" class="desktop-link">Divine Spice</a>
+                        <input type="checkbox" id="show-divine-spice">
+                        <label for="show-divine-spice">Divine Spice</label>
+                        <ul>
+                          <li><a href="#">Sub Menu 1</a></li>
+                          <li><a href="#">Sub Menu 2</a></li>
+                          <li><a href="#">Sub Menu 3</a></li>
+                        </ul>
+                      </li>
+                  <li><a href="#">Sustainabilty</a></li>
+                  <li><a href="#">History</a></li>
+                  <li><a href="#">News</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+          <form action="#" class="search-box">
+            <input type="text" placeholder="Type Something to Search..." required>
+            <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
+          </form>
+        </nav>
+      </div>
+      <img src="images/2.svg" alt="">
 </body>
 </html>
