Creating upper part of home page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>DIVINE SPICE</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://use.typekit.net/juj1gel.css">
 </head>
 <body>
+    <!--<img src="images/2.svg" alt="background" class="background-img">-->
     <!--Navigation-->
     <div class="wrapper">
         <nav>
@@ -16,7 +18,7 @@
           <input type="checkbox" id="show-menu">
           <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
           <div class="content">
-          <div class="logo"><a href="#">DIVINE SPICE</a></div>
+          <div class="logo"><a href="#">Divine Spice</a></div>
             <ul class="links">
               <li><a href="#">Home</a></li>
               <li>
@@ -59,7 +61,7 @@
                           <li><a href="#">Sub Menu 3</a></li>
                         </ul>
                       </li>
-                  <li><a href="#">Sustainabilty</a></li>
+                  <li><a href="#">Sustainability</a></li>
                   <li><a href="#">History</a></li>
                   <li><a href="#">News</a></li>
                 </ul>
@@ -73,6 +75,16 @@
           </form>
         </nav>
       </div>
-      <img src="images/2.svg" alt="">
+    
+      <article class="header-content">
+          <div>
+            <h1 class="home-page-head-heading">Divine Spice</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur<br>  adipisicing elit. 
+              Nobis est consequuntur<br ea molestiae velit?> Cumque, voluptatibus,
+               nesciunt nobis non<br> maiores sint delectus repellendus asperiores,<br>
+                quas beatae ea quisquam omnis rerum.</p>
+          </div>
+          <div><img src="images/body.png" alt=""></div>
+      </article>
 </body>
 </html>
