--- a/index.html
+++ b/index.html
@@ -1,90 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIVINE SPICE</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" href="https://use.typekit.net/juj1gel.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DIVINE SPICE</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/juj1gel.css">
 </head>
-<body>
-    <!--<img src="images/2.svg" alt="background" class="background-img">-->
-    <!--Navigation-->
-    <div class="wrapper">
-        <nav>
-          <input type="checkbox" id="show-search">
-          <input type="checkbox" id="show-menu">
-          <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
-          <div class="content">
-          <div class="logo"><a href="#">Divine Spice</a></div>
-            <ul class="links">
-              <li><a href="#">Home</a></li>
-              <li>
-                <a href="#" class="desktop-link">Products</a>
-                <input type="checkbox" id="show-products">
-                <label for="show-products">Products</label>
-                <ul class="roll-out-nav">
-                  <li><a href="#">Hair</a></li>
-                  <li><a href="#">Body</a></li>
-                  <li><a href="#">Deodorant</a></li>
-                  <li><a href="#">Bestsellers</a></li>
-                  <li><a href="#">Sales</a></li>
-                  <li><a href="#">Editions</a></li>
-                  <li><a href="#">Gift ideas</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Men</a></li>
-              <li>
-                <a href="#" class="desktop-link">Campaigns</a>
-                <input type="checkbox" id="show-campaigns">
-                <label for="show-campaigns">Campaigns</label>
-                <ul class="roll-out-nav">
-                  <li><a href="#">Female body hair</a></li>                                                                      
-                  <li><a href="#">Female self-esteem</a></li>
-                </ul>
-              </li>
-              <li><a href="#">MyDivineSpice</a></li>
-              <li>
-                <a href="#" class="desktop-link">About us</a>
-                <input type="checkbox" id="show-about-us">
-                <label for="show-about-us">About us</label>
-                <ul class="roll-out-nav">
-                    <li>
-                        <a href="#" class="desktop-link">Divine Spice</a>
-                        <input type="checkbox" id="show-divine-spice">
-                        <label for="show-divine-spice">Divine Spice</label>
-                        <ul>
-                          <li><a href="#">Sub Menu 1</a></li>
-                          <li><a href="#">Sub Menu 2</a></li>
-                          <li><a href="#">Sub Menu 3</a></li>
-                        </ul>
-                      </li>
-                  <li><a href="#">Sustainability</a></li>
-                  <li><a href="#">History</a></li>
-                  <li><a href="#">News</a></li>
-                </ul>
-              </li>
+
+<body id="wrapper">
+  <!--<img src="images/2.svg" alt="background" class="background-img">-->
+  <!--Navigation-->
+  <div class="wrapper">
+    <nav>
+      <input type="checkbox" id="show-search">
+      <input type="checkbox" id="show-menu">
+      <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+      <div class="content">
+        <div class="logo"><a href="#">Divine Spice</a></div>
+        <ul class="links">
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#" class="desktop-link">Products</a>
+            <input type="checkbox" id="show-products">
+            <label for="show-products">Products</label>
+            <ul class="roll-out-nav">
+              <li><a href="#">Hair</a></li>
+              <li><a href="#">Body</a></li>
+              <li><a href="#">Deodorant</a></li>
+              <li><a href="#">Bestsellers</a></li>
+              <li><a href="#">Sales</a></li>
+              <li><a href="#">Editions</a></li>
+              <li><a href="#">Gift ideas</a></li>
             </ul>
-          </div>
-          <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
-          <form action="#" class="search-box">
-            <input type="text" placeholder="Type Something to Search..." required>
-            <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
-          </form>
-        </nav>
+          </li>
+          <li><a href="#">Men</a></li>
+          <li>
+            <a href="#" class="desktop-link">Campaigns</a>
+            <input type="checkbox" id="show-campaigns">
+            <label for="show-campaigns">Campaigns</label>
+            <ul class="roll-out-nav">
+              <li><a href="#">Female body hair</a></li>
+              <li><a href="#">Female self-esteem</a></li>
+            </ul>
+          </li>
+          <li><a href="#">MyDivineSpice</a></li>
+          <li>
+            <a href="#" class="desktop-link">About us</a>
+            <input type="checkbox" id="show-about-us">
+            <label for="show-about-us">About us</label>
+            <ul class="roll-out-nav">
+              <li>
+                <a href="#" class="desktop-link">Divine Spice</a>
+                <input type="checkbox" id="show-divine-spice">
+                <label for="show-divine-spice">Divine Spice</label>
+                <ul>
+                  <li><a href="#">Sub Menu 1</a></li>
+                  <li><a href="#">Sub Menu 2</a></li>
+                  <li><a href="#">Sub Menu 3</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Sustainability</a></li>
+              <li><a href="#">History</a></li>
+              <li><a href="#">News</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    
-      <article class="header-content">
-          <div>
-            <h1 class="home-page-head-heading">Divine Spice</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur<br>  adipisicing elit. 
-              Nobis est consequuntur<br ea molestiae velit?> Cumque, voluptatibus,
-               nesciunt nobis non<br> maiores sint delectus repellendus asperiores,<br>
-                quas beatae ea quisquam omnis rerum.</p>
-          </div>
-          <div><img src="images/body.png" alt=""></div>
+      <label for="show-search" class="search-icon"><i class="fas fa-search"></i></label>
+      <form action="#" class="search-box">
+        <input type="text" placeholder="Type Something to Search..." required>
+        <button type="submit" class="go-icon"><i class="fas fa-long-arrow-alt-right"></i></button>
+      </form>
+    </nav>
+  </div>
+
+  <article class="header-content">
+    <div class="home-page-head-heading" id="home-page-head-heading">
+      <h1 class="home-page-head-heading-h1">Divine Spice</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit.
+        Nobis est consequuntur<br ea molestiae velit?> Cumque, voluptatibus,
+        nesciunt nobis non<br> maiores sint delectus repellendus asperiores,<br>
+        quas beatae ea quisquam omnis rerum.</p>
+    </div>
+    <div class="body-art" id="body-art"><img src="images/body.png" alt=""></div>
+  </article>
+
+  <section class="card-content">
+    <div class="text-box-card-home-page">
+      <article >
+        <h3 class="home-page-h3">Bestsellers</h3>
+        <h2 class="home-page-h2">Your favorites all at one place</h2>
       </article>
+    </div>
+    <div class="card-wrapper">
+      <div class="card">
+        <div class="card-top">
+          <img src="" alt="">
+        </div>
+        <div class="card-bottom">
+
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
