Finished 2nd part of home page

--- a/index.html
+++ b/index.html
@@ -99,10 +99,37 @@
     <div class="card-wrapper">
       <div class="card">
         <div class="card-top">
-          <img src="" alt="">
+          <img src="images/old spice product.png" alt="product">
         </div>
         <div class="card-bottom">
+          <h4></h4>
+          <p class="shampoo-title">Magnetic Shampoo</p>
+          <p class="price-title">50DKK</p>
+          <button type="button" class="shampoo-button">SHOP NOW</button>
+        </div>
+      </div>
 
+      <div class="card">
+        <div class="card-top">
+          <img src="images/old spice product.png" alt="product">
+        </div>
+        <div class="card-bottom">
+          <h4></h4>
+          <p class="shampoo-title">Magnetic Shampoo</p>
+          <p class="price-title">50DKK</p>
+          <button type="button" class="shampoo-button">SHOP NOW</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-top">
+          <img src="images/old spice product.png" alt="product">
+        </div>
+        <div class="card-bottom">
+          <h4></h4>
+          <p class="shampoo-title">Magnetic Shampoo</p>
+          <p class="price-title">50DKK</p>
+          <button type="button" class="shampoo-button">SHOP NOW</button>
         </div>
       </div>
     </div>
