--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.typekit.net/juj1gel.css">
 </head>
 
-<body id="wrapper">
+<body>
   <!--<img src="images/2.svg" alt="background" class="background-img">-->
   <!--Navigation-->
   <div class="wrapper">
@@ -89,14 +89,16 @@
     <div class="body-art" id="body-art"><img src="images/body.png" alt=""></div>
   </article>
 
+
+
   <section class="card-content">
     <div class="text-box-card-home-page">
-      <article >
+      <article>
         <h3 class="home-page-h3">Bestsellers</h3>
         <h2 class="home-page-h2">Your favorites all at one place</h2>
       </article>
     </div>
-    <div class="card-wrapper">
+    <div class="card-wrap">
       <div class="card">
         <div class="card-top">
           <img src="images/old spice product.png" alt="product">
@@ -134,6 +136,66 @@
       </div>
     </div>
   </section>
+
+  <article class="campaign-section">
+    <h5>End to shaming female <br>
+      body hair.</h5>
+    <p>Lorem ipsum dolor sit amet, consectetur <br>
+      adipiscing elit, sed do eiusmod tempor <br>
+      incididunt ut labore et dolore magna aliqua.<br>
+      Ut enim ad minim veniam, quis nostrud exercitation <br>
+      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <button type="button" class="campaign-button">READ MORE</button>
+  </article>
+
+  <section class="new-edition-wrapper">
+    <img src="images/old spice product.png" alt="new-edition">
+    <div>
+      <h5>NEW EDITION</h5>
+      <p>With the smell of <br> refreshing coconut <br> and cinamon</p>
+      <button type="button" class="new-edition-button">SHOP NOW</button>
+    </div>
+  </section>
+
+  <footer>
+    <div>
+      <h5 class="footer-logo">Divine Spice</h5>
+    </div>
+    <div class="footer-box">
+
+      <div>
+        <h5>PRODUCTS</h5>
+        <p>Hair</p>
+        <p>Body</p>
+        <p>Deodorants</p>
+        <p>Bestsellers</p>
+      </div>
+
+      <div>
+        <h5>ABOUT US</h5>
+        <p>History</p>
+        <p>Purpose</p>
+        <p>News</p>
+        <p>Sustainability</p>
+      </div>
+
+      <div>
+        <h5>SUPPORT</h5>
+        <p>Privacy Policy</p>
+        <p>Terms & Conditions</p>
+        <p>Help Centre</p>
+        <p>Contact Us</p>
+      </div>
+
+    </div>
+    <div class="social-media-footer">
+      <h5>FOLLOW US ON SOCIAL MEDIA</h5>
+      <img src="images/facebook.png" alt="">
+      <img src="images/instagram.png" alt="">
+      <img src="images/twitter.png" alt="" class="twitter">
+      <img src="images/youtube.png" alt="">
+    </div>
+  </footer>
 </body>
 
 </html>
