Made home page responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type="checkbox" id="show-menu">
       <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
       <div class="content">
-        <div class="logo"><a href="#">Divine Spice</a></div>
+        <div class="logo"><a href="index.html">Divine Spice</a></div>
         <ul class="links">
           <li><a href="#">Home</a></li>
           <li>
@@ -37,7 +37,7 @@
               <li><a href="#">Gift ideas</a></li>
             </ul>
           </li>
-          <li><a href="#">Men</a></li>
+          <li><a href="https://oldspice.com/">Men</a></li>
           <li>
             <a href="#" class="desktop-link">Campaigns</a>
             <input type="checkbox" id="show-campaigns">
@@ -81,10 +81,10 @@
   <article class="header-content">
     <div class="home-page-head-heading" id="home-page-head-heading">
       <h1 class="home-page-head-heading-h1">Divine Spice</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit.
-        Nobis est consequuntur<br ea molestiae velit?> Cumque, voluptatibus,
-        nesciunt nobis non<br> maiores sint delectus repellendus asperiores,<br>
-        quas beatae ea quisquam omnis rerum.</p>
+      <p>Lorem ipsum dolor, sit amet <br> consectetur adipisicing elit.
+        Nobis <br> est consequuntur ea molestiae velit? Cumque, <br> voluptatibus,
+        nesciunt nobis non maiores sint<br>  delectus repellendus asperiores,
+        quas beatae <br> ea quisquam omnis rerum.</p>
     </div>
     <div class="body-art" id="body-art"><img src="images/body.png" alt=""></div>
   </article>
@@ -179,10 +179,10 @@
         <p>Sustainability</p>
       </div>
 
-      <div>
+      <div class="support">
         <h5>SUPPORT</h5>
         <p>Privacy Policy</p>
-        <p>Terms & Conditions</p>
+        <p>Conditions</p>
         <p>Help Centre</p>
         <p>Contact Us</p>
       </div>
@@ -190,10 +190,12 @@
     </div>
     <div class="social-media-footer">
       <h5>FOLLOW US ON SOCIAL MEDIA</h5>
-      <img src="images/facebook.png" alt="">
-      <img src="images/instagram.png" alt="">
-      <img src="images/twitter.png" alt="" class="twitter">
-      <img src="images/youtube.png" alt="">
+      <div>
+        <img src="images/facebook.png" alt="">
+        <img src="images/instagram.png" alt="">
+        <img src="images/twitter.png" alt="" class="twitter">
+        <img src="images/youtube.png" alt="">
+      </div>
     </div>
   </footer>
 </body>
