Created Hair, Body, Deodorants page

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <div class="content">
         <div class="logo"><a href="index.html">Divine Spice</a></div>
         <ul class="links">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li>
             <a href="#" class="desktop-link">Products</a>
             <input type="checkbox" id="show-products">
             <label for="show-products">Products</label>
             <ul class="roll-out-nav">
-              <li><a href="#">Hair</a></li>
-              <li><a href="#">Body</a></li>
-              <li><a href="#">Deodorant</a></li>
+              <li><a href="hair.html">Hair</a></li>
+              <li><a href="body.html">Body</a></li>
+              <li><a href="deodorant.html">Deodorant</a></li>
               <li><a href="#">Bestsellers</a></li>
               <li><a href="#">Sales</a></li>
               <li><a href="#">Editions</a></li>
