Made all pages responsive and fixed headers

--- a/body.html
+++ b/body.html
@@ -78,7 +78,7 @@
         </nav>
     </div>
 
-    <div class="hair-care-heading">
+    <div class="body-care-heading">
         <h1>Body Care</h1>
     </div>
 
