--- a/deodorant.html
+++ b/deodorant.html
@@ -78,7 +78,7 @@
         </nav>
     </div>
 
-    <div class="hair-care-heading">
+    <div class="deodorant-heading">
         <h1>Deodorants</h1>
     </div>
 
