--- a/hair.html
+++ b/hair.html
@@ -101,7 +101,7 @@
                     <h4></h4>
                     <p class="shampoo-title">Magnetic Shampoo</p>
                     <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
