Adjusted the images on all pages

--- a/body.html
+++ b/body.html
@@ -95,108 +95,108 @@
         <div class="card-grid">
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Goddess Gel</p>
+                    <p class="price-title">20DKK</p>
+                    <a href="body-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-top">
+                    <img src="images/body shampoo2.png" alt="product">
+                </div>
+                <div class="card-bottom">
+                    <h4></h4>
+                    <p class="shampoo-title">Refreshing Gel</p>
+                    <p class="price-title">22DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body shampoo3.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Magnetic Gel</p>
+                    <p class="price-title">21DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body shampoo2.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Hers Gel</p>
+                    <p class="price-title">19DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Relaxing Gel</p>
+                    <p class="price-title">20DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body shampoo2.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Pure Gel</p>
+                    <p class="price-title">25DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body shampoo3.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Vibrant Gel</p>
+                    <p class="price-title">23DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Spicy Gel</p>
+                    <p class="price-title">21DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/body shampoo3.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="shampoo-title">Strong Gel</p>
+                    <p class="price-title">22DKK</p>
                     <button type="button" class="shampoo-button">SHOP NOW</button>
                 </div>
             </div>
