--- a/deodorant-product.html
+++ b/deodorant-product.html
@@ -78,130 +78,68 @@
         </nav>
     </div>
 
-    <div class="deodorant-heading">
-        <h1>Deodorants</h1>
+    <section class="product-header">
+        <img src="images/old spice product.png" alt="product">
+    </section>
+
+    <div class="product-text">
+        <h1>CINAMON FRESH</h1>
+        <h2>Deodorant</h2>
+        <p>75 ml&nbsp;&nbsp;&nbsp;&nbsp; 18 DKK</p>
+        <a href="deodorant-product.html"><button type="button">ADD TO CART</button></a>
     </div>
 
-    <article>
-        <div class="text-box-card-home-page">
-            <article>
-                <h3 class="hair-page-h3">Women's care</h3>
-                <h2 class="home-page-h2">Explore our women's deodorant products</h2>
-            </article>
+    <section class="advantage-wrapper">
+        <h3>ADVANTAGE</h3>
+        <div class="advantage-boxes">
+            <div>
+                <img src="images/smell.png" alt="image-1">
+                <p>ANTIPERSPIRANT</p>
+            </div>
+            <div>
+                <img src="images/soft.png" alt="image-2">
+                <p>SENSITIVE SKIN</p>
+            </div>
+            <div>
+                <img src="images/alch.png" alt="image-3">
+                <p>NON-ALCOHOLIC</p>
+            </div>
+            <div>
+                <img src="images/vegan.png" alt="image-4">
+                <p>VEGAN</p>
+            </div>
+            <div>
+                <img src="images/enviorm.png" alt="image-5">
+                <p>ECO FRIENDLY</p>
+            </div>
+
         </div>
+        <ul>
+            <li>Without ethyl alcohol</li>
+            <li>48 hours of reliable protection</li>
+            <li>Specially developed for sensitive skin</li>
+            <li>Skin-friendly and dermatologically tested</li>
+            <li>Vegan and eviormentaly friendly</li>
+        </ul>
+
+    </section>
+
+    <article class="product-article">
+        <h3>READ MORE ABOUT THIS PRODUCT</h3>
+        <p>DIVINE SPICE Sensitive Protect provides the optimal combination of mild care and <br>
+            effective antiperspirant protection for up to 48 hours. Reliable formula <br>
+            with chamomile extract and avocado oil gives you effective protection against sweat <br>
+            without irritating the skin. The optimal combination of effective antiperspirant protection <br>
+            and our gentle care for sensitive skin under your arms.</p>
     </article>
 
-    <section class="card-flex">
-        <div class="card-grid">
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Magnetic Deodorant</p>
-                    <p class="price-title">18DKK</p>
-                    <a href="deodorant-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Refreshing Deodorant</p>
-                    <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Goddess Deodorant</p>
-                    <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Hers Deodorant</p>
-                    <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Relaxing Deodorant</p>
-                    <p class="price-title">21DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Pure Deodorant</p>
-                    <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product2.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Vibrant Deodorant</p>
-                    <p class="price-title">20DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Strong Deodorant</p>
-                    <p class="price-title">18DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product3.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Spicy Deodorant</p>
-                    <p class="price-title">19DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-        </div>
-    </section>
+    <article class="product-article2"> 
+        <h3>INGREDIENT LIST</h3>
+        <p>Aqua, Aluminum Chlorohydrate, PPG-15 Stearyl Ether, Steareth-2, Steareth-21, <br>
+            Recutita Flower Extract, Bisabolol, Persea Gratissima Oil, Glycine Soybean Oil, <br>
+            Tocopherol, Trisodium EDTA, BHT, Linalool, Geraniol, Citronellol 
+            </p>
+    </article>
 
     <footer>
         <div>
