--- a/hair-product.html
+++ b/hair-product.html
@@ -79,14 +79,14 @@
     </div>
 
     <section class="product-header">
-        <img src="images/old spice product.png" alt="product">
+        <img src="images/hair-shampoo.png" alt="product">
     </section>
 
     <div class="product-text">
-        <h1>CINAMON FRESH</h1>
-        <h2>Deodorant</h2>
-        <p>75 ml&nbsp;&nbsp;&nbsp;&nbsp; 50 DKK</p>
-        <a href="product.html"><button type="button">ADD TO CART</button></a>
+        <h1>MAGNETIC</h1>
+        <h2>Hair Shampoo</h2>
+        <p>865 ml&nbsp;&nbsp;&nbsp;&nbsp; 35 DKK</p>
+        <a href="hair-product.html"><button type="button">ADD TO CART</button></a>
     </div>
 
     <section class="advantage-wrapper">
