--- a/hair.html
+++ b/hair.html
@@ -95,109 +95,109 @@
         <div class="card-grid">
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
                     <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
+                    <p class="price-title">35DKK</p>
+                    <a href="hair-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-top">
+                    <img src="images/hair shampoo 2.png" alt="product">
+                </div>
+                <div class="card-bottom">
+                    <h4></h4>
+                    <p class="shampoo-title">Refreshing Shampoo</p>
+                    <p class="price-title">32DKK</p>
                     <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair shampoo3.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Goddess Shampoo</p>
+                    <p class="price-title">30DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair shampoo 2.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Hers Shampoo</p>
+                    <p class="price-title">32DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Relaxing Shampoo</p>
+                    <p class="price-title">30DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Pure Shampoo</p>
+                    <p class="price-title">35DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair shampoo3.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Vibrant Shampoo</p>
+                    <p class="price-title">34DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair shampoo 2.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Strong Shampoo</p>
+                    <p class="price-title">31DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
 
             <div class="card">
                 <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
+                    <img src="images/hair-shampoo.png" alt="product">
                 </div>
                 <div class="card-bottom">
                     <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-top">
-                    <img src="images/old spice product.png" alt="product">
-                </div>
-                <div class="card-bottom">
-                    <h4></h4>
-                    <p class="shampoo-title">Magnetic Shampoo</p>
-                    <p class="price-title">50DKK</p>
-                    <button type="button" class="shampoo-button">SHOP NOW</button>
+                    <p class="shampoo-title">Spicy Shampoo</p>
+                    <p class="price-title">35DKK</p>
+                    <a href="product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
                 </div>
             </div>
         </div>
