--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
   <article class="header-content">
     <div class="home-page-head-heading" id="home-page-head-heading">
       <h1 class="home-page-head-heading-h1">Divine Spice</h1>
-      <p>Lorem ipsum dolor, sit amet <br> consectetur adipisicing elit.
-        Nobis <br> est consequuntur ea molestiae velit? Cumque, <br> voluptatibus,
-        nesciunt nobis non maiores sint<br>  delectus repellendus asperiores,
-        quas beatae <br> ea quisquam omnis rerum.</p>
+      <p>We offer only <b>the best</b> for you, your hair and your body.
+        Our <b> unique</b> strong smell will make you go crazy.  Show your <b> confidence</b> with Divine Spice! Be <b> remembered!</b> </p>
     </div>
     <div class="body-art" id="body-art"><img src="images/body.png" alt=""></div>
   </article>
@@ -101,13 +99,13 @@
     <div class="card-wrap">
       <div class="card">
         <div class="card-top">
-          <img src="images/old spice product.png" alt="product">
+          <img src="images/hair-shampoo.png" alt="product">
         </div>
         <div class="card-bottom">
           <h4></h4>
           <p class="shampoo-title">Magnetic Shampoo</p>
-          <p class="price-title">50DKK</p>
-          <button type="button" class="shampoo-button">SHOP NOW</button>
+          <p class="price-title">35DKK</p>
+          <a href="hair-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
         </div>
       </div>
 
@@ -117,21 +115,21 @@
         </div>
         <div class="card-bottom">
           <h4></h4>
-          <p class="shampoo-title">Magnetic Shampoo</p>
-          <p class="price-title">50DKK</p>
-          <button type="button" class="shampoo-button">SHOP NOW</button>
+          <p class="shampoo-title">Cinamon Fresh</p>
+          <p class="price-title">18DKK</p>
+          <a href="deodorant-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-top">
-          <img src="images/old spice product.png" alt="product">
+          <img src="images/body-shampoo.png" alt="product">
         </div>
         <div class="card-bottom">
           <h4></h4>
-          <p class="shampoo-title">Magnetic Shampoo</p>
-          <p class="price-title">50DKK</p>
-          <button type="button" class="shampoo-button">SHOP NOW</button>
+          <p class="shampoo-title">Goddess Gel</p>
+          <p class="price-title">20DKK</p>
+          <a href="body-product.html"><button type="button" class="shampoo-button">SHOP NOW</button></a>
         </div>
       </div>
     </div>
@@ -140,20 +138,20 @@
   <article class="campaign-section">
     <h5>End to shaming female <br>
       body hair.</h5>
-    <p>Lorem ipsum dolor sit amet, consectetur <br>
-      adipiscing elit, sed do eiusmod tempor <br>
-      incididunt ut labore et dolore magna aliqua.<br>
-      Ut enim ad minim veniam, quis nostrud exercitation <br>
-      ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>We are here to make a <b> change</b> for better. 
+      No woman should ever feel uncomfortable  
+      because of her body hair! With our products we
+      want to <b>promote and normalize</b> female 
+      body hair in today's society. <b>Thats why  we did this...</b></p>
     <button type="button" class="campaign-button">READ MORE</button>
   </article>
 
   <section class="new-edition-wrapper">
-    <img src="images/old spice product.png" alt="new-edition">
+    <img src="images/homepage-neweditition-product.png" alt="new-edition">
     <div>
       <h5>NEW EDITION</h5>
       <p>With the smell of <br> refreshing coconut <br> and cinamon</p>
-      <button type="button" class="new-edition-button">SHOP NOW</button>
+      <a href="deodorant-product.html"><button type="button" class="new-edition-button">SHOP NOW</button></a>
     </div>
   </section>
 
